# mmd

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: 实现功能文档.md  开发者复刻-checklist.md
src/: App.tsx  modules.d.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: EditorPane.tsx  PreviewPane.tsx  TitleBar.tsx
src/components/ui/: button.tsx
src/utils/: htmlToMarkdown.ts  markdown.ts
